examples/should-fail/f29_duplicate_with_conversion_noise.lean
def demo3_duplicate_with_conversion_noise : (A : Type) -> A -> A :=
  fun (A : Type) (x : A) => x

def demo3_duplicate_with_conversion_noise : (B : Type) -> B -> B :=
  fun (B : Type) (y : B) => y
